--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ h2 {
     width: 400px;
     line-height: 40px;
     border: none;
+    font-size: 16px;
 }
 .login:hover {
     background-color: rgb(13, 102, 190); 
@@ -53,10 +54,24 @@ h2 {
     cursor: pointer;
 }
 
+.register {
+  display: block;         
+  text-align: center;   
+  text-decoration: none;  
+  padding: 15px 0; 
+  border: #000000;
+  color: #000000;            
+  font-size: 14px;
+}
+
+.register:hover {
+  background-color: rgb(13, 102, 190);
+  cursor: pointer;
+}
 
 .Login-Container {
     width: 400px;
-    height: 260px;
+    height: 310px;
     padding: 10px;
     background-color: white;
     border: 1px solid white;
@@ -117,4 +132,37 @@ h2 {
 .logout-button:hover {
   text-decoration: underline; 
   cursor: pointer;
+}
+.register_Container {
+    width: 400px;
+    height: 350px;
+    padding: 10px;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px black;
+    margin-top: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+.create{
+  margin-top: 10px;
+  display: block;           
+  width: 100%;              
+  padding: 12px 0;          
+  box-sizing: border-box;   
+  background-color: #007bff; 
+  color: #ffffff;            
+  text-align: center;        
+  text-decoration: none;     
+  font-family: sans-serif;  
+  font-size: 16px;          
+  
+}
+
+
+.create:hover {
+  background-color: #0056b3; 
 }
